# ichatbio-idigbio-agent

./: Dockerfile  README.md  pyproject.toml
src/: agent.py  prompt.py  schema.py  util.py
src/entrypoints/: count_occurrence_records.py  find_media_records.py  find_occurrence_records.py
src/resources/: control_loop_prompt.md  media_records_examples.md  occurrence_records_examples.md
src/tools/: count_occurrence_records.py  find_media_records.py  find_occurrence_records.py  util.py
tests/: conftest.py  test_agent.py  test_count_occurrence_records.py  test_find_media_records.py  test_find_occurrence_records.py
