[project]
name = "ichatbio-idigbio-agent"
version = "1"
requires-python = ">=3.12"
dependencies = [
    "ichatbio-sdk==0.2.7",
    "openai>=1.109.1",
    "pydantic>=2.13.4",
    "instructor>=1.15.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
log_cli = true
log_cli_level = "INFO"
